--- a/scss/all-blocks/_about.scss
+++ b/scss/all-blocks/_about.scss
@@ -6,7 +6,7 @@
    align-items: center;
    justify-content: space-between;
    width: 100%;
-	max-width: 1155px;
+   max-width: 1155px;
 }
 .about__pictures {
    flex-shrink: 1;
@@ -15,11 +15,12 @@
    width: 100%;
    max-width: 350px;
    height: 100%;
-   max-height: 600px;
+   
 }
 .about__line-top {
    display: inline-block;
-   width: 350px;
+   width: 100%;
+   max-width: 350px;
    height: 1px;
    margin-bottom: 46px;
    background-color: #33323D;
@@ -52,8 +53,47 @@
 }
 .about__line-bottom {
    display: inline-block;
-   width: 350px;
+   width: 100%;
+   max-width: 350px;
    height: 1px;
    background-color: #33323D;
    opacity: 0.15;
+}
+@media only screen and (max-width: 950px) {
+   .about {
+      padding-bottom: 96px;
+   }
+   .about__pictures {
+      width: 281px;
+      height: 600px;
+   }
+   .about__info {
+      width: 100%;
+      max-width: 339px;
+      
+   }
+   .about__line-top {
+      width: 100%;
+      max-width: 339px;
+   } 
+   .about__line-bottom {
+      width: 100%;
+      max-width: 339px;
+   }
+}
+@media only screen and (max-width: 680px) {
+   .about__pictures {
+      width: 311px;
+      height: 346px;
+      margin-bottom: 32px;
+   }
+   .about .container {
+      flex-direction: column;
+   }
+   .about__line-top {
+       margin-bottom: 50px;
+  }
+      .about__info__link {
+      margin-bottom: 50px;
+   }
 }
