--- a/scss/all-blocks/_hero.scss
+++ b/scss/all-blocks/_hero.scss
@@ -7,7 +7,6 @@
    padding: 243px 665px 0 0;
    width: 100%;
    max-width: 1110px;
-   height: 600px;
    margin: 0 auto;
    background: url('../images/hero-bg.jpg') center center/cover no-repeat;
 }
@@ -68,4 +67,118 @@
    padding: 17px;
    text-align: center;
    background-color: #203A4C;
+}
+
+@media only screen and (-webkit-min-device-pixel-ratio: 2),
+only screen and (min--moz-device-pixel-ratio: 2),
+only screen and (-o-min-device-pixel-ratio: 2/1),
+only screen and (min-device-pixel-ratio: 2),
+only screen and (min-resolution: 192dpi),
+only screen and (min-resolution: 2dppx) {
+   .hero__inner{
+      background: url('../images/hero-bg@2x.jpg') center center/cover no-repeat;
+   }
+}
+@media only screen and (max-width: 1060px) {
+   .hero__inner{
+      padding: 322px 174px 0 0;
+   }
+   .hero__info {
+      width: 100%;
+      max-width: 514px;
+      height: 278px;
+      background-color: #fff;
+   }
+   .hero__info__heading {
+      width: 100%;
+      max-width: 458px;
+      padding-bottom: 48px;
+      font-size: 40px;
+      line-height: 42px;
+   }
+}
+@media only screen and (max-width: 934px) {
+   .hero__inner{
+      padding: 322px 174px 0 0;
+      background: url('../images/hero-bg-tablet.jpg') center center/cover no-repeat;
+   }
+   @media only screen and (-webkit-min-device-pixel-ratio: 2),
+   only screen and (min--moz-device-pixel-ratio: 2),
+   only screen and (-o-min-device-pixel-ratio: 2/1),
+   only screen and (min-device-pixel-ratio: 2),
+   only screen and (min-resolution: 192dpi),
+   only screen and (min-resolution: 2dppx) {
+      .hero__inner{
+         background: url('../images/hero-bg-tablet@2x.jpg') center center/cover no-repeat;
+      }
+   }
+}
+@media only screen and (max-width: 768px) {
+   .hero {
+      padding-bottom: 96px;
+   }
+}
+@media only screen and (max-width: 655px) {
+   .hero {
+      padding-bottom: 356px;
+   }
+   .hero__inner{
+      position: relative;
+      z-index: 1;
+      padding: 0;
+      height: 500px;
+      background-image: url('../images/hero-bg-mobile.jpg');
+      background-repeat: no-repeat;
+      background-size: contain;
+      
+   }
+   @media only screen and (-webkit-min-device-pixel-ratio: 2),
+   only screen and (min--moz-device-pixel-ratio: 2),
+   only screen and (-o-min-device-pixel-ratio: 2/1),
+   only screen and (min-device-pixel-ratio: 2),
+   only screen and (min-resolution: 192dpi),
+   only screen and (min-resolution: 2dppx) {
+      .hero__inner{
+         background-image: url('../images/hero-bg-mobile@2x.jpg');
+         }
+   }
+   .hero__info {
+      position: absolute;
+      z-index: 1;
+      top: 100%;
+      left: 50%;
+      transform: translateX(-50%);
+      padding-top: 24px;
+      width: 100%;
+      max-width: 311px;
+   }
+   .hero__info__heading {
+      width: 100%;
+      max-width: 311px;
+      padding: 0px;
+      margin-bottom: 48px;
+      
+   }
+}  
+@media only screen and (max-width: 613px){
+   .hero__inner {
+      height: 400px;
+   }
+}
+@media only screen and (max-width: 450px){
+   .hero__inner { 
+      width: 280px;
+      height: 271px;
+   }
+   .hero__info {
+      margin: 0;
+      padding: 0;
+   }
+   .hero__info__heading {
+      width: 100%;
+      max-width: 280px;
+      padding: 0px;
+      margin-bottom: 48px;
+      
+   }
 }
