--- a/scss/all-blocks/_header.scss
+++ b/scss/all-blocks/_header.scss
@@ -59,32 +59,31 @@
 	}
 
 	.header--open .nav {
-		position: fixed;
+		position: absolute;
 		z-index: 100;
-		top: 0;
+		top: 110px;
 		right: 0;
-		bottom: 0;
-		left: 0;
-		width: 100%;
-		height: 100%;
+		width: 223px;
+		height: 186px;
 		display: flex;
 		align-items: center;
 		justify-content: center;
-		background: linear-gradient(
-			180deg,
-			rgba(254, 252, 247, 0.504981) 0%,
-			#fefcf7 55.94%
-		);
-	}
+		padding: 40px 64px;
+		background-color: #33323D;
+		transition: background-color 0.2s ease;
+		}
 
 	.header--open .nav__list {
 		flex-direction: column;
 		justify-content: center;
 	}
-
+	.header--open .nav__link {
+		color: #fff;
+	}
 	.nav__item + .nav__item {
 		margin-left: 0;
 		margin-top: 32px;
+		color: #fff;
 	}
 
 	.header--open .hamburger__menu {
