--- a/scss/all-blocks/_header.scss
+++ b/scss/all-blocks/_header.scss
@@ -29,6 +29,7 @@
    letter-spacing: 0.923077px;
    text-transform: uppercase;
    text-decoration: none;
+	color: #33323D;
    transition: color 0.2s ease;
 }
 
